--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm from NYC and I'm a student studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, powerlifting, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Toni Morrison, Ursula le Guin, and Yiyun Li. I'm passionate about fourth wave feminism and FLI education. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm from NYC and I'm a student studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, powerlifting, backpacking, and listening to rock or indie music when I code. I'm a Yankees fan and I love to read the works of Toni Morrison, Ursula le Guin, and Yiyun Li. I'm passionate about fourth wave feminism and FLI education. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -128,13 +128,16 @@
 		<li>Overall GPA: 3.95
 		<li>Double majors in English and Physics
 		<li>Activities:
-		  FLI (first-gen, low-income mentor) mentor, Physics mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, Attached writing center partner, The Women's Union staff member, research assistant
+		  FLI (first-gen, low-income mentor) mentor, physics mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, attached writing center partner, The Women's Union head coordinator, ALPHA (awesome ladies* in physics & astronomy) organizer
 	      </ul>
 	      <b>Stuyvesant High School</b> (2016-2020)
 	      <span style="float:right;"><i>New York City, NY</i></span>
 	      <ul>
-		      <li>Activities:
-			<a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete
+		<li>Overall GPA: 4.00
+		<li>Relevant Courses: Software Development, AP English Literature, AP Physics C, AP Calculus BC, AP Chemistry, World Literature, Data Structures & Algorithms
+		<li>Activities:
+		  <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
+		  <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
 	      </ul>
 	    </div>
 	  </div>
@@ -144,14 +147,20 @@
 	      <h3>STEM Experience</h3>
 	    </div>
 	    <div class="col1" style="width:70%">
-	      <b>Air Force Research Laboratories</b> (2021-2021)
+	      <b>UCLouvain and ULiège</b> (2023-Present)
+	      <span style="float:right;"><i>Louvain-la-Neuve and Liège, Belgium</i></span>
+	      <br><i>REU Student</i>
+	      <ul>
+		<li>Studied Gravitaitonal Wave detector instrumentation studies, focusing on generating mode mismatch error signals
+	      </ul>
+	      <b>Air Force Research Laboratories</b> (2022-2022)
 	      <span style="float:right;"><i>Albuquerque, NM</i></span>
 	      <br><i>Research Assistant</i>
 	      <ul>
 		<li>Generated an electro-optic frequency comb in the RF and visible spectrums, focusing on low noise sources
 		<li> Studied dual-comb interferograms for precision timing applications
 	      </ul>
-	      <b>Whitaker Labs</b> (2022-Present)
+	      <b>Whitaker Labs</b> (2022-2023)
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>Biophysics Student Researcher</i>
 	      <ul>
@@ -170,7 +179,7 @@
 	      <br><i>Co-captain</i>
 	      <ul>
 		<li>Competed in a a robotics programming competition where the robots are SPHERES (Synchronized Position Hold Engage and Reorient Experimental Satellites) inside the International Space Station
-		<li>Won the 2019 championships, where an astrunaut conducted the code live in microgravity aboard the ISS
+		<li>Won the 2019 championships, where an astrunaut conducted the cde live in microgravity aboard the ISS
 		<li>Competed against teams across the US and member states of the European Space Agency
 	      </ul>
 	    </div>
@@ -181,11 +190,11 @@
 	      <h3>Humanities Experience</h3>
 	    </div>
 	    <div class="col1" style="width:70%">
-	      <b>Humanities Studio</b> (2023-2024)
+	      <b>Humanities Studio Fellowship</b> (2023-2024)
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>Undergraduate Student Fellow</i>
 	      <ul>
-		<li>One of six students awarded the undergraduate fellows program, an engagement for senior thesis research through a series of weekly seminar discussions and participation in the Studio’s program of visiting speakers, professional development workshops, and other campus and community events.
+		<li>One of six students awarded the undergraduate fellows program, an engagement for senior thesis research through a series of weekly seminar discussions, as well as to participate in the Studio’s program of visiting speakers, professional development workshops, and other campus and community events.
 		<li>Engaged in interdisicplinary discussion of the 2023-2024 theme of "Joy"
 	      </ul>
 	      <b>Pomona College Linguistics & Chinese Department</b> (2020-2021)
@@ -242,6 +251,23 @@
 	    </div>
 	  </div>
 
+	  <div class="row1">
+	    <div class="col1" style="width:30%">
+	      <h3>Awards</h3>
+	    </div>
+	    <div class="col1" style="width:70%">
+	      <ul>
+		<li>Pomona College Rhodes and Marshall Fellowships Internal Endorsement Awardee (2023-2024)
+		<li>Alfred Kwok Memorial Physics Prize (2023)
+		<li>F. S. Jennings Prize in Critical Writing (2023)
+		<li>Tileston First-year Prize in Physic (2020-2021)
+		<li>Pomona College Scholar (Fall 2020, Spring 2023)
+		<li>Greater New York Dollars for Scholars: New York Life Scholarship Award recipient (2020-2024)
+		<li>Chia Family Foundation Scholarship Award recipient (2022-2024)
+	      </ul>
+	    </div>
+	  </div>
+
 	  
 
 	  <!-------------------- PORTFOLIO -------------------->
@@ -282,16 +308,12 @@
 		<img src="img/footer/li.png" height="30px;" width="30px;">
 	      </a>
 	      <a href="https://github.com/yaruluo">
-		<img src="img/footer/gh.png" height="30px;" width="30px;">
-	      </a>
-	      <a href="https://www.goodreads.com/user/show/118504126-yaru-luo">
-		<img src="img/footer/gr.png" height="30px;" width="30px;">
-	      </a>
+		<img
 	      <a href="mailto:yaruluo09@gmail.com">
 		<img src="img/footer/gm.png" height="30px;" width="30px;">
 	      </a>
 	    </div>
-	    <br>made with love by Yaru Luo
+	    <br>&copy;Yaru Luo || 2023
 	  </div>
 	  
 	</div>
