--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 	       onmouseover="navC.src='img/icons/resumeB.png'"
 	       onmouseout="navC.src='img/icons/resumeG.png'">
 	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
-	<br><a href="#projects"
+	<br><a href="commonplace.html"
 	       onmouseover="navD.src='img/icons/portB.png'"
 	       onmouseout="navD.src='img/icons/portG.png'">
-	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
+	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Commonplace</span></a>
 	<br><a href="mailto:yaruluo09@gmail.com"
 	       onmouseover="navE.src='img/icons/contactB.png'"
 	       onmouseout="navE.src='img/icons/contactG.png'">
@@ -135,6 +135,9 @@
 	      <ul>
 		<li>Overall GPA: 4.00
 		<li>Relevant Courses: Software Development, AP English Literature, AP Physics C, AP Calculus BC, AP Chemistry, World Literature, Data Structures & Algorithms
+		<li>Activities:
+		  <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
+		  <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
 	      </ul>
 	    </div>
 	  </div>
@@ -268,19 +271,20 @@
 	  
 
 	  <!-------------------- PORTFOLIO -------------------->
-	  <div class="projects" id="projects">
+	  <!----
+	      <div class="projects" id="projects">
 
 	    <hr><br>
 	    <h2>Art. Just for fun.</h2>
 	    <script src='https://embedsocial.com/js/iframe.js'></script> <iframe style='border: 0; width: 100%; height: 100%;' scrolling=no src='https://embedsocial.com/facebook_album/pro_hashtag/a5c6465cf50f70dd5090abb48d13c446cf558e42'></iframe><script>iFrameResize();</script>
 
-	    
+	    --->
 	    <!-- <h3>Projects</h3> -->
 	    <!-- https://yaruluo.techscholars.repl.co/ -->
 	    <!-- http://p4.jckiesd.tech/ -->
 	    <!-- https://htmlpreview.github.io/?https://github.com/yaruluo/Not-My-Problem/blob/master/index.html -->
 
-	  </div>
+	  <!--</div>-->
 	  
 
 	  <!-------------------- FOOTER -------------------->
@@ -306,7 +310,7 @@
 	      </a>
 	      <a href="https://github.com/yaruluo">
 		<img
-	      <a href="mailto:yaruluo09@gmail.com">
+	      <a href="mailto:yaruluo47@gmail.com">
 		<img src="img/footer/gm.png" height="30px;" width="30px;">
 	      </a>
 	    </div>
