--- a/commonplace.html
+++ b/commonplace.html
@@ -57,18 +57,18 @@
 	       onmouseover="navA.src='img/icons/homeB.png'"
 	       onmouseout="navA.src='img/icons/homeG.png'">
 	  <img id="navA" src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
-	<br><a href="#about"
+	<br><a href="index.html"
 	       onmouseover="navB.src='img/icons/aboutB.png'"
 	       onmouseout="navB.src='img/icons/aboutG.png'">
 	  <img id="navB" src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
-	<br><a href="#resume"
+	<br><a href="index.html"
 	       onmouseover="navC.src='img/icons/resumeB.png'"
 	       onmouseout="navC.src='img/icons/resumeG.png'">
-	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Commonplace</span></a>
+	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
 	<br><a href="commonplace.html"
 	       onmouseover="navD.src='img/icons/portB.png'"
 	       onmouseout="navD.src='img/icons/portG.png'">
-	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
+	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Commonplace</span></a>
 	<br><a href="mailto:yaruluo09@gmail.com"
 	       onmouseover="navE.src='img/icons/contactB.png'"
 	       onmouseout="navE.src='img/icons/contactG.png'">
