--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 	       onmouseover="navD.src='img/icons/portB.png'"
 	       onmouseout="navD.src='img/icons/portG.png'">
 	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Commonplace</span></a>
+	<br><a href="album.html"
+	       onmouseover="navC.src='img/icons/filmB.png'"
+	       onmouseout="navC.src='img/icons/filmG.png'">
+	  <img id="navC" src="img/icons/filmG.png" height="20px;" width="20px;"> <span>Heautoscopy</span></a>
 	<br><a href="mailto:yaruluo09@gmail.com"
 	       onmouseover="navE.src='img/icons/contactB.png'"
 	       onmouseout="navE.src='img/icons/contactG.png'">
@@ -106,7 +110,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm from NYC and I'm a student studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, powerlifting, backpacking, and listening to rock or indie music when I code. I'm a Yankees fan and I love to read the works of Toni Morrison, Ursula le Guin, and Yiyun Li. I'm passionate about fourth wave feminism and FLI education. It's nice to meet you!
+	    Hey, I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm currently studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, backpacking, and listening to rock or indie music when I code. I conduct research in optical physics, with a focus in laser photonics and instrumentation. I am also deeply passionate about the language of protest and radicalism, social justice, and equity in STEM. I'm a Yankees fan and love to read the works of Toni Morrison and Ursula K. Le Guin. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -125,16 +129,14 @@
 	      <b>Pomona College </b> (2020-2024)
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <ul>
-		<li>Overall GPA: 3.95
+		<li>Overall GPA: 3.96
 		<li>Double majors in English and Physics
 		<li>Activities:
-		  FLI (first-gen, low-income mentor) mentor, physics mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, attached writing center partner, The Women's Union head coordinator, ALPHA (awesome ladies* in physics & astronomy) organizer
+		  FLI (first-gen, low-income mentor) mentor, physics TA, AAMP (Asian-American mentoring program) mentor, first-year sponsor, attached writing center partner, The Women's Union head coordinator, ALPHA (awesome ladies* in physics & astronomy) president
 	      </ul>
 	      <b>Stuyvesant High School</b> (2016-2020)
 	      <span style="float:right;"><i>New York City, NY</i></span>
 	      <ul>
-		<li>Overall GPA: 4.00
-		<li>Relevant Courses: Software Development, AP English Literature, AP Physics C, AP Calculus BC, AP Chemistry, World Literature, Data Structures & Algorithms
 		<li>Activities:
 		  <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
 		  <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
@@ -299,22 +301,17 @@
 	      <a href="https://twitter.com/yaruluo09">
 		<img src="img/footer/tw.png" height="30px;" width="30px;">
 	      </a>
-	      <a href="https://www.facebook.com/kangyaru">
-		<img src="img/footer/fb.png" height="30px;" width="30px;">
-	      </a>
 	      <a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
 		<img src="img/footer/sp.png" height="30px;" width="30px;">
 	      </a>
 	      <a href="https://www.linkedin.com/in/yaruluo/">
 		<img src="img/footer/li.png" height="30px;" width="30px;">
 	      </a>
-	      <a href="https://github.com/yaruluo">
-		<img
 	      <a href="mailto:yaruluo47@gmail.com">
 		<img src="img/footer/gm.png" height="30px;" width="30px;">
 	      </a>
 	    </div>
-	    <br>&copy;Yaru Luo || 2023
+	    <br>made with &#9825 || Yaru Luo, 2023
 	  </div>
 	  
 	</div>
