--- a/album.html
+++ b/album.html
@@ -85,8 +85,8 @@
       
       <div class="content" style="font-family:Georgia; font-size:0.65em">
 
-	emanations of the referent, a lucida of joy. loaded like the delayed rays of a star
-	<br><br><br><br>
+	Emanations of the referent, a lucida of joy. Loaded like the delayed rays of a star. Things seen along the way.
+	      <br><br><br><br>
 	
 	<div class="container">
 	  <div class="column-center" align="center">
