--- a/album.html
+++ b/album.html
@@ -57,11 +57,11 @@
 	       onmouseover="navA.src='img/icons/homeB.png'"
 	       onmouseout="navA.src='img/icons/homeG.png'">
 	  <img id="navA" src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
-	<br><a href="index.html"
+	<br><a href="#about"
 	       onmouseover="navB.src='img/icons/aboutB.png'"
 	       onmouseout="navB.src='img/icons/aboutG.png'">
 	  <img id="navB" src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
-	<br><a href="index.html"
+	<br><a href="#resume"
 	       onmouseover="navC.src='img/icons/resumeB.png'"
 	       onmouseout="navC.src='img/icons/resumeG.png'">
 	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
@@ -69,6 +69,10 @@
 	       onmouseover="navD.src='img/icons/portB.png'"
 	       onmouseout="navD.src='img/icons/portG.png'">
 	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Commonplace</span></a>
+	<br><a href="album.html"
+	       onmouseover="navC.src='img/icons/filmB.png'"
+	       onmouseout="navC.src='img/icons/filmG.png'">
+	  <img id="navC" src="img/icons/filmG.png" height="20px;" width="20px;"> <span>Heautoscopy</span></a>
 	<br><a href="mailto:yaruluo09@gmail.com"
 	       onmouseover="navE.src='img/icons/contactB.png'"
 	       onmouseout="navE.src='img/icons/contactG.png'">
@@ -86,7 +90,7 @@
       <div class="content" style="font-family:Georgia; font-size:0.65em">
 
 	Emanations of the referent, a lucida of joy. Loaded like the delayed rays of a star. Things seen along the way.
-	      <br><br><br><br>
+	<br><br><br><br>
 	
 	<div class="container">
 	  <div class="column-center" align="center">
