--- a/commonplace.html
+++ b/commonplace.html
@@ -57,11 +57,11 @@
 	       onmouseover="navA.src='img/icons/homeB.png'"
 	       onmouseout="navA.src='img/icons/homeG.png'">
 	  <img id="navA" src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
-	<br><a href="#about"
+	<br><a href="index.html#about"
 	       onmouseover="navB.src='img/icons/aboutB.png'"
 	       onmouseout="navB.src='img/icons/aboutG.png'">
 	  <img id="navB" src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
-	<br><a href="#resume"
+	<br><a href="index.html#resume"
 	       onmouseover="navC.src='img/icons/resumeB.png'"
 	       onmouseout="navC.src='img/icons/resumeG.png'">
 	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
