--- a/album.html
+++ b/album.html
@@ -94,6 +94,7 @@
 	
 	<div class="container">
 	  <div class="column-center" align="center">
+	    <img src="img/album/roof.jpeg" width="100%">
 	    <img src="img/album/berry.jpeg" width="100%">
 	    <img src="img/album/draws.jpeg" width="100%">
 	    <img src="img/album/paris-1.jpeg" width="100%">
