--- a/index.html
+++ b/index.html
@@ -149,7 +149,14 @@
 	      <h3>STEM Experience</h3>
 	    </div>
 	    <div class="col1" style="width:70%">
-	      <b>UCLouvain and ULiège</b> (2023-Present)
+	      <b>Pomona College McCluskey Lab</b> (2023-Present)
+	      <span style="float:right;"><i>Claremont, CA</i></span>
+	      <br><i>First Student</i>
+	      <ul>
+		<li>Building a total internal reflection fluorescence (TIRF) microscope (TIRFM) from scratch
+		<li>Setting up Professor Kaley McCluskey's optics laboratory
+	      </ul>
+	      <b>Université Catholique de Louvain</b> (2023-Present)
 	      <span style="float:right;"><i>Louvain-la-Neuve and Liège, Belgium</i></span>
 	      <br><i>REU Student</i>
 	      <ul>
@@ -232,6 +239,7 @@
 	    </div>
 	    <div class="col1" style="width:70%">
 	      <ul>
+		<li>Pomona College APS-IDEAS (Inclusion, Diversity, and Equity Alliance) team
 		<li>JoyJ Homeless Coalition
 		<li>Founded an activity over the summer of 2019 wherein I picked up used flowers from weddings, personally rearranged them, and donated them to senior centers and womens shelters
 		<li>American Red Cross Blood Services
