--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ o<!doctype html>
 		<li>Minor: Philosophy
 		<li>Affiliation groups and campus community volunteerism:
 		  FLI (first-gen, low-income mentor) mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, writing center partner
+	      	<li>Workshops: Universiy of Arizona Winter Optics School 2023
 	      </ul>
 	      <b>Stuyvesant High School</b> (2016-2020)
 	      <span style="float:right;"><i>New York City, NY</i></span>
