--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>First Student</i>
 	      <ul>
-		<li>Building a total internal reflection fluorescence (TIRF) microscope (TIRFM) from scratch
-		<li>Setting up Professor Kaley McCluskey's optics laboratory
+		<li>Building a CoSMoS-type total internal reflection fluorescence (TIRF) microscope (TIRFM) for high-resolution experiments
+		<li>Putting the lab together from an empty room, assisting Professor Kaley McCluskey in developing each lab component from scratch
 	      </ul>
 	      <b>Université Catholique de Louvain</b> (2023-2023)
 	      <span style="float:right;"><i>Louvain-la-Neuve and Liège, Belgium</i></span>
