--- a/commonplace.html
+++ b/commonplace.html
@@ -57,11 +57,11 @@
 	       onmouseover="navA.src='img/icons/homeB.png'"
 	       onmouseout="navA.src='img/icons/homeG.png'">
 	  <img id="navA" src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
-	<br><a href="index.html#about"
+	<br><a href="#about"
 	       onmouseover="navB.src='img/icons/aboutB.png'"
 	       onmouseout="navB.src='img/icons/aboutG.png'">
 	  <img id="navB" src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
-	<br><a href="index.html#resume"
+	<br><a href="#resume"
 	       onmouseover="navC.src='img/icons/resumeB.png'"
 	       onmouseout="navC.src='img/icons/resumeG.png'">
 	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
@@ -105,6 +105,9 @@
 	      <br><br><br>
 	      <i>Do I cherish my wildness more than I fear their rejection?</i> <br>—Alexis Pauline Gumbs
 
+	      <br><br><br>
+	      <i>So many painful experiences that she still carried deep in the marrow of her bones.</i> <br>—Clint Smith
+
 	  </div>
 
 	  <div class="column-left" align="center">
@@ -131,6 +134,8 @@
 	    <i>I must to the learned. In good time!</i> <br>—Shakespeare
 	    <br><br><br>
 	    <i>Fools follow after vanity, men of evil wisdom.</i> <br>—from the Dhammapada (anon)
+	    <br><br><br>
+	    <i>A doubt. Slender as a hair... Sweet sweet homecoming. Sweet as the scent of face powder in the air, jasmine, sticky liquor. Smudged fingerprint on the door. Crushed cigarette in a glass. Wrinkle in the brain crumpling to a crease.</i> <br>—Sandra Cisneros
 
 
 	  </div>
