--- a/album.html
+++ b/album.html
@@ -104,7 +104,7 @@
 	    <img src="img/album/nyc1.jpeg" width="100%">
 	    <img src="img/album/lawry.jpeg" width="100%">
 	    <img src="img/album/ocean.jpeg" width="100%">
-	    <!--<img src="img/album/draws1.jpeg" width="100%">-->
+	    <img src="img/album/draws1.jpeg" width="100%">
 	    <img src="img/album/revolt.png" width="100%">
 	    <img src="img/album/socal.jpeg" width="100%">
 	  </div>
@@ -119,19 +119,22 @@
 	    <img src="img/album/book3.jpeg" width="100%">
 	    <img src="img/album/pisa.jpeg" width="100%">
 	    <img src="img/album/inscription.jpeg" width="100%">
+	    <img src="img/album/paris5.jpeg" width="100%">  
+	    <img src="img/album/pomona.png" width="100%">
 	  </div>
 
 	  <div class="column-right" align="center">
 	    <img src="img/album/pisa-1.jpeg" width="100%">
 	    <img src="img/album/socal3.jpeg" width="100%">
 	    <img src="img/album/book1.jpeg" width="100%">
-	     <img src="img/album/mammoth.jpeg" width="100%">
+	     <img src="img/album/mammoth.png" width="100%">
 	    <img src="img/album/book2.jpeg" width="100%">
 	    <img src="img/album/sf1.jpeg" width="100%">
 	    <img src="img/album/draws2.jpeg" width="100%">
 	    <img src="img/album/me3.jpeg" width="100%">
 	    <img src="img/album/val.jpeg" width="100%">
 	    <img src="img/album/socal1.jpeg" width="100%">
+	    <img src="img/album/berries.png" width="100%">
 	  </div>
 	 
 	</div>
