--- a/album.html
+++ b/album.html
@@ -106,7 +106,7 @@
 	    <img src="img/album/ocean.jpeg" width="100%">
 	    <img src="img/album/draws1.jpeg" width="100%">
 	    <img src="img/album/revolt.png" width="100%">
-	    <img src="img/album/socal.jpeg" width="100%">
+	    <img src="img/album/draws3.png" width="100%">
 	  </div>
 
 	  <div class="column-left" align="center">
@@ -134,17 +134,23 @@
 	    <img src="img/album/me3.jpeg" width="100%">
 	    <img src="img/album/val.jpeg" width="100%">
 	    <img src="img/album/socal1.jpeg" width="100%">
-	    <img src="img/album/berries.png" width="100%">
+	    <img src="img/album/berry.png" width="100%">
 	  </div>
 	 
 	</div>
 	<div style="clear:both"></div>
 	 <br><br>
-	<hr>
 	
 	<br>
+	<!---
+	 <div class="projects" id="projects">
 
+	    <hr><br>
+	    <h2>Art. Just for fun.</h2>
+	    <script src='https://embedsocial.com/js/iframe.js'></script> <iframe style='border: 0; width: 100%; height: 100%;' scrolling=no src='https://embedsocial.com/facebook_album/pro_hashtag/a5c6465cf50f70dd5090abb48d13c446cf558e42'></iframe><script>iFrameResize();</script>
 
+	 </div>
+	 ---->
       </div>
       
       <!-------------------- FOOTER -------------------->
