--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+o<!doctype html>
 <html>
   <head>
     
@@ -110,7 +110,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey, I'm so glad you're here! My name is Yaru Luo, but you can call me Ru (she/her). I'm currently studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, backpacking, and listening to rock or indie music when I code. I conduct research in optical physics, with a focus in laser photonics and instrumentation. I am also deeply passionate about the language of protest and radicalism, social justice, and equity in STEM. I'm a Yankees fan and love to read the works of Toni Morrison and Ursula K. Le Guin. It's nice to meet you!
+	    Hey, I'm so glad you're here! My name is Yaru Luo, but you can call me Ru (she/her). I am currently pursuing a PhD in experimental optical physics at CU Boulder in the Scott Diddams Lab. I graduated with two BAs in English & Physics at Pomona College and honors in my theses. I grew up in NYC and am now based in Colorado. I like working with children, snowboarding, contributing to teams, rock-climbing, and listening to rock or indie music when I code. I conduct research in laser frequency combs, with a focus in extreme precision radial velocity calibration instrumentation. I am also deeply passionate about the language of protest and radicalism, social justice, and equity in STEM. I'm a Yankees fan and love to read the works of Toni Morrison and Ursula K. Le Guin. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -126,15 +126,21 @@
 	      <h3>Education</h3>
 	    </div>
 	    <div class="col1" style="width:70%">
+	      <b>University of Colorado Boulder</b> (2024-Present)
+	      <span style="float:right;"><i>Boulder, CO</i></span>
+	      <ul>
+		<li>Department of Physics
+		<li>Department of Electrical, Computer and Energy Engineering
+	      </ul>
 	      <b>Pomona College </b> (2020-2024)
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <ul>
-		<li>Overall GPA: 3.96
+		<li>Overall GPA: 3.97
 		<li>Double majors: English and Physics
 		<li>Minor: Philosophy
 		<li>Affiliation groups and campus community volunteerism:
 		  FLI (first-gen, low-income mentor) mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, writing center partner
-	      	<li>Workshops: Universiy of Arizona Winter Optics School 2023
+		<li>Workshops: Universiy of Arizona Winter Optics School 2023
 	      </ul>
 	      <b>Stuyvesant High School</b> (2016-2020)
 	      <span style="float:right;"><i>New York City, NY</i></span>
@@ -155,8 +161,8 @@
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>First Student</i>
 	      <ul>
-		<li>Building a CoSMoS-type total internal reflection fluorescence (TIRF) microscope (TIRFM) for high-resolution experiments
-		<li>Putting the lab together from an empty room, assisting Professor Kaley McCluskey in developing each lab component from scratch
+		<li>Building a total internal reflection fluorescence (TIRF) microscope (TIRFM) from scratch
+		<li>Setting up Professor Kaley McCluskey's optics laboratory
 	      </ul>
 	      <b>Université Catholique de Louvain</b> (2023-2023)
 	      <span style="float:right;"><i>Louvain-la-Neuve and Liège, Belgium</i></span>
@@ -208,12 +214,10 @@
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>Founder and President</i>
 	      <ul>
-		<li>Refounded the organization from a pre-covid pandemic halt
-		<li>Renamed and asterisked the organization from its previous name to “lxdies*” in its refounding in order to openly welcome folks of all marginalized genders and not only AFABs (assigned-females-at-birth)
+		<li>Refounded and renamed the organization from a pre-covid pandemic halt
 		<li>Handled all expenses and financial operations of the club and raised $5000 in independent funding during the club's first year of establishment
 		<li>Hosted weekly lunches for physics students of marginalized genders to consciousness-raise or simply lean back on regularly
-		<li>Organized trips to off-campus conferences and laboratories highlighting women in physics for students to meet role models
-		<li>Planned events about gender-based DEI like a "What's feminism for?" event to put men into the conversation of how they can support feminism in STEM and why the patriarchy also affects men
+		<li>Organized on-campus DEI events and off-campus trips to conferences and laboratories highlighting women in physics for students to meet role models
 	      </ul>
 
 	      <b>Pomona College Department of Physics PHYS009</b> (2021-Present)
@@ -317,12 +321,19 @@
 	    </div>
 	    <div class="col1" style="width:70%">
 	      <ul>
+		<li>CU Boulder Chair's Fellowship Award (2024)
+		<li>Richard P. Edmunds Physics Prize (2024)
+		<li>Phi Beta Kappa Honors Society (initiated 2024)
+		<li>Humanities Studio Fellowship Awardee (2023-2024)
 		<li>Alfred Kwok Memorial Physics Prize (2023)
 		<li>F. S. Jennings Prize in Critical Writing (2023)
 		<li>Tileston First-year Prize in Physic (2020-2021)
 		<li>Pomona College Scholar (Fall 2020, Spring 2023)
 		<li>Greater New York Dollars for Scholars: New York Life Scholarship Award recipient (2020-2024)
 		<li>Chia Family Foundation Scholarship Award recipient (2022-2024)
+		<li>International Zero Robotics competition: First Place champions (2019)
+		<li>ByteHacks, the largest all-women hackathon centered in NY: Best Environmental Hack winner (2018)
+
 	      </ul>
 	    </div>
 	  </div>
