--- a/album.html
+++ b/album.html
@@ -89,7 +89,8 @@
       
       <div class="content" style="font-family:Georgia; font-size:0.65em">
 
-	Emanations of the referent, a lucida of joy, loaded like the delayed rays of a star. Things seen along the way.
+		 <!--Emanations of the referent, a lucida of joy, loaded like the delayed rays of a star.-->
+	Things seen along the way.
 	<br><br><br><br>
 	
 	<div class="container">
