--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ o<!doctype html>
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "writer.", "physicist.", "feminist."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "PhD student.", "physicist.", "feminist."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -110,7 +110,7 @@ o<!doctype html>
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey, I'm so glad you're here! My name is Yaru Luo, but you can call me Ru (she/her). I am currently pursuing a PhD in experimental optical physics at CU Boulder in the Scott Diddams Lab. I graduated with two BAs in English & Physics at Pomona College and honors in my theses. I grew up in NYC and am now based in Colorado. I like working with children, snowboarding, contributing to teams, rock-climbing, and listening to rock or indie music when I code. I conduct research in laser frequency combs, with a focus in extreme precision radial velocity calibration instrumentation. I am also deeply passionate about the language of protest and radicalism, social justice, and equity in STEM. I'm a Yankees fan and love to read the works of Toni Morrison and Ursula K. Le Guin. It's nice to meet you!
+	    Hey, I'm so glad you're here! My name is Yaru Luo, but you can call me Ru (she/her). I am currently pursuing a PhD in experimental optical physics at CU Boulder in the Scott Diddams Lab. I graduated with two BAs in English & Physics at Pomona College and honors in my theses. I grew up in NYC and am now based in Colorado. I like working with children, snowboarding, contributing to teams, rock-climbing, and listening to rock or indie music when I code. I conduct research in laser frequency combs, with a focus in extreme precision radial velocity calibration instrumentation. I am also deeply passionate about the language of protest and radicalism, social justice, and equity in STEM. I'm a Yankees fan and love to read the works of Toni Morrison and contemporary autofiction authors. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
